--- a/debug/css/main.css
+++ b/debug/css/main.css
@@ -12094,5 +12094,9 @@ main {
 .nav-pills > li {
   cursor: pointer;
 }
+.name-list {
+  text-align: left;
+  font-size: 48px;
+}
 
 /*# sourceMappingURL=maps/main.css.map */
