Basic functionality works

--- a/debug/css/main.css
+++ b/debug/css/main.css
@@ -12098,5 +12098,8 @@ main {
   text-align: left;
   font-size: 48px;
 }
+.hidden {
+  display: none;
+}
 
 /*# sourceMappingURL=maps/main.css.map */
